# Tool-Solutions

./: .gitignore  .pre-commit-config.yaml  .woke.yml  .wokeignore  CONTRIBUTING.md  Jenkinsfile  README.md  SECURITY.md
.github/workflows/: _pytorch-single-platform.yml  hygiene.yml  precommit.yml  pytorch.yml  tensorflow.yml  woke-review.yml
ML-Frameworks/pytorch-aarch64/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bash_profile  build-torch-ao-wheel.sh  build-wheel.sh  build.sh  bump-sources.sh  cpu_info.sh  dockerize.sh  get-source.sh  requirements.txt  versions.sh  welcome.txt
ML-Frameworks/tensorflow-aarch64/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bash_profile  build-wheel.sh  build.sh  bump-sources.sh  cpu_info.sh  dockerize.sh  get-source.sh  requirements.txt  welcome.txt  welcome.txt.license
ML-Frameworks/utils/: git-utils.sh
allinea-studio-examples/sortmovies/: Makefile  README.md  gen_test_data.sh  get_data.sh  sortmovies_1.c  sortmovies_2.c  sortmovies_3.c
ascet-developer/: README.md
boards/: README.md
boards/rock960-linux/: README.md  swap.sh
docker/arm-tool-base/: Dockerfile  Makefile  README.md
docker/arm-tool-base-cms/: Dockerfile  Makefile  README.md
docker/arm-tool-interactive/: Dockerfile  README.md  nx_server.sh  vnc_server.sh
docker/arm-tool-vnc/: Dockerfile  README.md  vnc.sh
docker/c-hello-world/: Dockerfile  README.md  build.ps1  hello.c  inspect.ps1  run.ps1
docker/cmsis-models/: Dockerfile  README.md  build.sh  build_basic_math.sh  cmake_M55.sh  cmake_M7F.sh  get-ac6.sh  run.sh  setup-cmsis.sh
docker/flask-hello-world/: Dockerfile  README.md  build.ps1  inspect.ps1  run-multi-arch.ps1  run-native.ps1  stop.ps1
docker/pytorch-aarch64/: .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  bash_profile  build-wheel.sh  build.sh  cpu_info.sh  dockerize.sh  get-source.sh  requirements.txt
docker/tensorflow-aarch64/: CHANGELOG.md  Dockerfile  README.md  bash_profile  build.sh  cpu_info.sh
docker/tensorflow-lite-aarch64/: CHANGELOG.md  Dockerfile  README.md  bash_profile  build.sh
docker/tensorflow-lite-corstone-fvp/: Dockerfile  README.md  build.sh  get-ac6.sh  run.sh
docker/tensorflow-lite-micro-fvp/: Dockerfile  README.md  build.sh  build_tflite_micro_test.sh  download_tflow_cmsis.sh  run.sh
docker/tensorflow-lite-micro-models/: Dockerfile  README.md  build.sh  build_tflite_micro_test.sh  download_tflow_cmsis.sh  run.sh
docker/tensorflow-lite-micro-rtos-fvp/: .dockerignore  LICENSE  README-ja.md  README-sv.md  README.md  data_injection_demo.py  docker_build.PS1  docker_build.sh  docker_fvp_run.sh  docker_run.sh  download_use_case_model.sh  get_deps.PS1  get_deps.sh  linux_build.sh  linux_build_eval_kit.sh  linux_build_eval_kit_apps.sh  linux_build_rtos_apps.sh  requirements.txt  run_demo_app.sh  run_fvp_eval.py
docker/tensorflow-lite-micro-rtos-fvp/sw/corstone-300-person-detection/: CMakeLists.txt  JP_Kyoto_kimono.cpp  POV_cat.cpp  images.cpp  images.hpp  main.cpp  model.hpp  person_male_man_men.cpp
docker/tensorflow-lite-micro-rtos-fvp/sw/corstone-300-person-detection/samples/: resources.md
docker/tensorflow-lite-micro-rtos-fvp/sw/ethos-u/samples/person_detection/: CMakeLists.txt  JP_Kyoto_kimono.cpp  POV_cat.cpp  README.md  main.cpp  model_vela.cpp  person_male_man_men.cpp  tree.cpp
fast-models-examples/GICv3.x_GICv4.x_example/: FVP_Base_AEMv8A-AEMv8A-MultiGIC.lisa  Makefile  MultiGIC.lisa  ReadMe.txt  gicv3_all.params  gicv4_all.params  scatter.txt  scatter_virt.txt
fast-models-examples/STM_Demo/: README.txt
fast-models-examples/armv8.1-m/: Makefile  README.md  hello.c  makefile.inc  scatter.scat
fast-models-examples/cortex-m33-subsystem/: README.md
fast-models-examples/cortex-m35/: README.md
hello-world_fast-models/: README.md
mathworks-support-packages/: README.md
ml-tool-examples/: README.md
mlops-cloud/: README.md
perf-derived-metrics/: .gitignore  README.md  midr.py  requirements.txt  stat.py
windows-pmu-to-reg/: Example.wprp  README.md  pmu-to-reg.py
(+739 files in other folders)
